<resources>
    <string name="app_name">Discussions</string>
    <string name="username_display">\@%s</string>

    //Login Activity
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in_label">Log In</string>
    <string name="signup_label">Sign Up</string>
    <string name="or_label">Or</string>
    <string name="desc_facebook">Log in with Facebook</string>
    <string name="desc_google">Log in with Google</string>

    //Home Activity
    <string name="home_label">Home</string>
    <string name="poll_label">Polls</string>
    <string name="desc_add">Add New Post or Poll</string>
    <string name="notification_label">Notifications</string>
    <string name="profile_label">Profile</string>

    //Create Posts/Polls Bottom Sheet
    <string name="create_post_label">Create Post</string>
    <string name="create_poll_label">Create Poll</string>

    <string name="edit_post_label">Edit Post</string>
    <string name="edit_poll_label">Edit Poll</string>

    //Create/Edit Post Activity
    <string name="create_post_btn_text">Post</string>
    <string name="edit_post_btn_text">Edit</string>
    <string name="create_edit_post_profile_image_desc">Profile Image</string>
    <string name="create_edit_post_user_name">@string/profile_username_text</string>
    <string name="create_edit_post_hint_title">Title</string>
    <string name="create_edit_post_hint_content">What do you want to talk about?</string>
    <string name="create_edit_post_remove_image_desc">Remove Image</string>
    <string name="create_edit_post_image_desc">Post\'s Image</string>
    <string name="create_edit_post_add_image_text">Add Image</string>
    <string name="create_edit_post_allow_comments_text">Allow Comments</string>

    //Create Poll Activity
    <string name="create_poll_profile_image_desc">@string/create_edit_post_image_desc</string>
    <string name="create_poll_user_name">@string/profile_username_text</string>
    <string name="create_poll_hint_title">@string/create_edit_post_hint_title</string>
    <string name="create_poll_hint_content">What do you want to ask?</string>
    <string name="create_poll_create_button_text">Create</string>
    <string name="create_poll_edit_button_text">Edit</string>

    <string name="create_poll_add_option_text">Add Option</string>
    <string name="create_poll_remove_option_desc">Remove Option</string>
    <string name="create_poll_private_text">Private</string>

    //Profile Fragment
    <string name="profile_image_desc">Display Profile Image</string>
    <string name="profile_name_text">Name</string>
    <string name="profile_username_text">\@username</string>
    <string name="profile_settings_desc">Settings</string>
    <string name="profile_edit_button_text">Edit Profile</string>
    <string name="profile_posts_text">100</string>
    <string name="profile_posts_label">Posts</string>
    <string name="profile_polls_text">114</string>
    <string name="profile_polls_label">Polls</string>
    <string name="profile_rating_text">200</string>
    <string name="profile_rating_label">Rating</string>

    //Edit Profile Activity
    <string name="back_button_desc">Back Button</string>
    <string name="edit_details_label_personal_data">Edit Details</string>
    <string name="edit_details_clear_desc">Clear Profile Photo</string>
    <string name="edit_details_desc">Edit Profile Photo</string>
    <string name="edit_details_label_username">Username</string>
    <string name="edit_details_label_first_name">First Name</string>
    <string name="edit_details_label_last_name">Last Name</string>
    <string name="edit_details_label_gender_name">Gender</string>
    <string name="edit_details_label_gender_male">Male</string>
    <string name="edit_details_label_gender_female">Female</string>
    <string name="edit_details_label_email">Email</string>
    <string name="edit_details_label_mobile_no">Mobile Number</string>
    <string name="edit_details_label_dob">Date of Birth</string>
    <string name="edit_details_label_text_dob">%d-%d-%d</string>
    <string name="edit_details_label_address">Address</string>
    <string name="edit_details_update_profile_btn">UPDATE PROFILE</string>

    //Settings Activity
    <string name="settings_label">Settings</string>
    <string name="settings_label_change_password">Change Password</string>
    <string name="settings_label_theme">Theme</string>
    <string name="settings_label_feedback">Feedback</string>
    <string name="settings_faq_label">FAQ</string>
    <string name="settings_about_label">About</string>
    <string name="settings_logout_label">Logout</string>

    //Post List Item
    <string name="post_list_item_title">Title</string>
    <string name="post_list_item_time">Time</string>
    <string name="post_list_item_content">Content</string>
    <string name="post_list_item_like_count">100</string>
    <string name="post_list_item_comment_count">100</string>
    <string name="post_list_item_like">Like</string>
    <string name="post_list_item_comment">Comment</string>

    //User Post Activity
    <string name="user_post_label">%s Posts</string>

    //Post/Poll More Options Bottom Sheet
    <string name="post_poll_more_options">More Options</string>
    <string name="post_poll_menu_edit">Edit</string>
    <string name="post_poll_menu_delete">Delete</string>
    <string name="post_poll_menu_bookmark">Bookmark</string>
    <string name="post_poll_menu_report">Report</string>
    <string name="post_poll_menu_cancel">Cancel</string>

    //Poll List Item
    <string name="poll_list_item_title">@string/post_list_item_title</string>
    <string name="poll_list_item_private_desc">This Poll is Private</string>
    <string name="poll_list_item_time">@string/post_list_item_time</string>
    <string name="poll_list_item_more_options">@string/post_poll_more_options</string>
    <string name="poll_list_item_content">@string/post_list_item_content</string>
    <string name="poll_list_item_like_count">@string/post_list_item_like_count</string>
    <string name="poll_list_item_comment_count">@string/post_list_item_comment_count</string>
    <string name="poll_list_item_like">@string/post_list_item_like</string>
    <string name="poll_list_item_comment">@string/post_list_item_comment</string>
    <string name="poll_list_item_view_result">View Results</string>

    //Poll Result Activity
    <string name="poll_result_label">Poll Results</string>
    <string name="poll_result_question_text">Poll Question</string>
    <string name="poll_result_option_text">Tap on Pie Chart</string>
    <plurals name="poll_result_option_votes_text">
        <item quantity="zero">%d Votes</item>
        <item quantity="one">%d Vote</item>
        <item quantity="other">%d Votes</item>
    </plurals>
    <string name="poll_result_option_votes_text">1 Vote</string>

    //Comments Bottom Sheet
    <string name="comment_bs_count">%d</string>
    <string name="comment_action_label_reply">Reply:</string>
    <string name="comment_action_label_edit">Edit:</string>
    <string name="comment_action_content">@string/username</string>
    <string name="comment_action_cancel_desc">Cancel Reply</string>
    <string name="comment_hint">Write a comment…</string>
    <string name="comment_send">Add Comment</string>

    //Item Comment
    <string name="item_comment_avatar_desc">User Avatar</string>
    <string name="item_comment_user_name">@string/username</string>
    <string name="item_comment_content">Lorem ipsum dolor sit amet Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="item_comment_time">2 hours ago</string>
    <string name="item_comment_like">Like</string>
    <string name="item_comment_reply">Reply</string>
    <string name="item_comment_like_count">25</string>

    //Comment Options Bottom Sheet
    <string name="comment_options_edit">Edit</string>
    <string name="comment_options_delete">Delete</string>
    <string name="comment_options_reply">Reply</string>
    <string name="comment_options_copy">Copy</string>
    <string name="comment_options_cancel">Cancel</string>

    //Notification Fragment
    <string name="notification_clear_all_desc">Clear All Notifications</string>

    //Item Notification
    <string name="item_notification_avatar_desc">User Avatar</string>
    <string name="item_notification_time">2 hours ago</string>
    <string name="item_notification_remove">Delete Remove</string>

    //Item Post Notification
    <string name="item_post_notification_title"><b>\@username</b> Liked your post:</string>
    <string name="item_post_notification_content">Lorem ipsum dolor sit amet Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="item_post_notification_post_image_desc">Post Image</string>

    //Item Poll Notification
    <string name="item_poll_notification_title"><b>\@username</b> Liked your poll:</string>
    <string name="item_poll_notification_content">Lorem ipsum dolor sit amet Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    //Item Comment Notification
    <string name="item_comment_notification_title"><b>\@username</b> Liked your comment:</string>
    <string name="item_comment_notification_content">Lorem ipsum dolor sit amet Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


    //Notification Options Bottom Sheet
    <string name="notification_options_image_desc">Notification Image</string>
    <string name="notification_options_title">Notification Title</string>
    <string name="notification_options_content_header">%s:</string>
    <string name="notification_options_content">Notification Content</string>
    <string name="notification_options_remove">Delete</string>
    <string name="notification_options_mark_as_read">Mark as Read</string>
    <string name="notification_options_cancel">Cancel</string>


    //Post Details Activity
    <string name="post_details_label">Post Details</string>
    <string name="post_details_comments_label">Comments</string>
    <string name="post_details_more_options">More Options</string>

    //Poll Details Activity
    <string name="poll_details_label">Poll Details</string>
    <string name="poll_details_comments_label">Comments</string>
    <string name="poll_details_more_options">More Options</string>
</resources>