<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/option_edit_comment_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/comment_options_edit"
            app:drawableStartCompat="@drawable/ic_edit" />

        <TextView
            android:id="@+id/option_delete_comment_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/comment_options_delete"
            app:drawableStartCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/option_reply_comment_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/comment_options_reply"
            app:drawableStartCompat="@drawable/ic_comments" />

        <TextView
            android:id="@+id/option_copy_comment_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/comment_options_copy"
            app:drawableStartCompat="@drawable/ic_copy" />


        <TextView
            android:id="@+id/option_cancel_comment_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/comment_options_cancel"
            app:drawableStartCompat="@drawable/ic_back_arrow" />
    </LinearLayout>
</layout>