<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <View
            android:id="@+id/comments_bs_control"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/dark_gray" />

        <TextView
            android:id="@+id/option_edit_discussion_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/post_poll_menu_edit"
            app:drawableStartCompat="@drawable/ic_edit" />

        <TextView
            android:id="@+id/option_delete_discussion_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/post_poll_menu_delete"
            app:drawableStartCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/option_bookmark_discussion_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/post_poll_menu_bookmark"
            app:drawableStartCompat="@drawable/ic_bookmark" />

        <TextView
            android:id="@+id/option_report_discussion_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/post_poll_menu_report"
            app:drawableStartCompat="@drawable/ic_report" />


        <TextView
            android:id="@+id/option_cancel_discussion_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/post_poll_menu_cancel"
            app:drawableStartCompat="@drawable/ic_back_arrow" />
    </LinearLayout>
</layout>