<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CreatePollActivity">

        <ImageView
            android:id="@+id/create_poll_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/back_button_desc"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toTopOf="@+id/create_poll_profile_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_poll_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/create_poll_label"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/create_poll_back_btn"
            app:layout_constraintStart_toEndOf="@+id/create_poll_back_btn"
            app:layout_constraintTop_toTopOf="@+id/create_poll_back_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_poll_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/create_poll_create_button_text"
            app:layout_constraintBottom_toBottomOf="@+id/create_poll_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/create_poll_label" />

        <ImageView
            android:id="@+id/create_poll_profile_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/create_edit_post_profile_image_desc"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_poll_back_btn" />

        <TextView
            android:id="@+id/create_poll_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:text="@string/create_edit_post_user_name"
            android:textColor="@color/dark_gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/create_poll_profile_iv"
            app:layout_constraintStart_toEndOf="@+id/create_poll_profile_iv"
            app:layout_constraintTop_toTopOf="@+id/create_poll_profile_iv" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/create_poll_cb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_poll_profile_iv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/create_poll_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:hint="@string/create_edit_post_hint_title"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="24sp"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/create_poll_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/create_poll_hint_content"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minHeight="100dp"
                    android:textSize="20sp"
                    tools:ignore="LabelFor" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/create_poll_options_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_poll_option" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_poll_add_option_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/create_poll_add_option_text"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/create_post_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/create_post_label" />
            </LinearLayout>
        </ScrollView>

        <CheckBox
            android:id="@+id/create_poll_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/login_header_color"
            android:checked="true"
            android:text="@string/create_poll_private_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>