<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/option_notification_iv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/notification_options_image_desc"
                app:layout_constraintBottom_toTopOf="@+id/option_notification_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/option_notification_type_cv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-4dp"
                android:layout_marginBottom="-4dp"
                app:cardBackgroundColor="@color/pie_chart_color_2"
                app:cardCornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/option_notification_iv"
                app:layout_constraintEnd_toEndOf="@+id/option_notification_iv">

                <ImageView
                    android:id="@+id/option_notification_type_iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/ic_image"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/option_notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:maxLines="3"
                android:text="@string/notification_options_title"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/option_notification_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/option_notification_iv" />

            <TextView
                android:id="@+id/option_notification_content_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/notification_options_content_header"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/option_notification_content" />

            <TextView
                android:id="@+id/option_notification_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:maxLines="3"
                android:text="@string/notification_options_content"
                android:textColor="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/option_notification_content_header"
                app:layout_constraintTop_toBottomOf="@+id/option_notification_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/option_delete_notification_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/comment_options_delete"
            app:drawableStartCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/option_mark_notification_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/notification_options_mark_as_read"
            app:drawableStartCompat="@drawable/ic_notification_read" />

        <TextView
            android:id="@+id/option_cancel_comment_tv"
            style="@style/BSOptionsTvStyle"
            android:text="@string/notification_options_cancel"
            app:drawableStartCompat="@drawable/ic_back_arrow" />
    </LinearLayout>
</layout>